# centreon-collect

./: .deepsource.toml  .gitignore  .gitleaks.toml  .snyk  .veracode-exclusions  .version  .version.centreon-collect  .version.centreon-gorgone  2  CHANGELOG.md  CMakeCPack.cmake  CMakeLists.txt  CMakeListsAgentOnly.txt  CMakeListsCollect.txt  CMakeListsLinux.txt  CMakeListsWindows.txt  CMakePresets.json  Jenkinsfile  MariaDB-common-10.5.8-1.el8.x86_64.rpm  MariaDB-compat-10.5.8-1.el8.x86_64.rpm  MariaDB-shared-10.5.8-1.el8.x86_64.rpm  NOTICE  README.md  centreon_cmake.bat  cmake-vcpkg.sh  cmake.sh  conanfile.py  conanfile.txt  coverage.sh  cppcheck.sh  deps.py  hello.c  init.sh  install.sh  interactive_console_output.xml  jest.config.js  license.txt  output.xml  package-lock.json  package.json  (+5 more)
agent/: CMakeLists.txt
agent/bench/: README.md  create_bench_service.py  create_many_linux_agent.py  install_linux_agent.sh  measure_agent_perf.ps1  nsclient.ini
agent/conf/: CMakeLists.txt  centagent.cfg.in  centagent.json.in  centagent.reg
agent/doc/: agent-doc.md
agent/installer/: CMakeLists.txt  centreon-monitoring-agent-modify.nsi  centreon-monitoring-agent.nsi  compile_installer.ps1.in  dlg_helper.nsi  silent.nsi  version.nsi.in
agent/precomp_inc/: precomp.hh
agent/proto/: agent.proto
agent/scripts/: centagent.service.in
agent/src/: agent.rc.in  bireactor.cc  check.cc  check_exec.cc  check_health.cc  config.cc  config_win.cc  drive_size.cc  filter.cc  filter_rules.cc  log.cc  main.cc  main_win.cc  native_check_base.cc  native_check_cpu_base.cc  native_check_memory_base.cc  native_drive_size.cc  scheduler.cc  streaming_client.cc  streaming_server.cc
agent/test/: CMakeLists.txt  check_event_log_data_test.cc  check_event_log_data_test.hh  check_event_log_filter_test.cc  check_event_log_test.cc  check_event_log_uniq_test.cc  check_exec_test.cc  check_health_test.cc  check_linux_cpu_test.cc  check_process_container_test.cc  check_process_data_test.cc  check_process_filter_test.cc  check_process_test.cc  check_test.cc  check_uptime_test.cc  check_windows_counter.cc  check_windows_cpu_test.cc  check_windows_files_test.cc  check_windows_memory_test.cc  check_windows_sched.cc  check_windows_service_test.cc  config_test.cc  drive_size_test.cc  filter_test.cc  process_data_test.hh  scheduler_test.cc  test_main.cc
bbdo/: CMakeLists.txt  bam.proto  bam_state.proto  bbdo.proto  comment.proto  downtime.proto  events.hh  extcmd.proto  generate-accessor.py  host.proto  neb.proto  neb_proto.proto  rebuild_message.proto  remove_graph_message.proto  service.proto  severity.proto  storage.proto  storage_proto.proto  tag.proto  to_remove.proto
bbdo/bam/: ba_duration_event.cc  ba_duration_event.hh  ba_event.cc  ba_event.hh  ba_status.cc  ba_status.hh  dimension_ba_bv_relation_event.cc  dimension_ba_bv_relation_event.hh  dimension_ba_event.cc  dimension_ba_event.hh  dimension_ba_timeperiod_relation.cc  dimension_ba_timeperiod_relation.hh  dimension_bv_event.cc  dimension_bv_event.hh  dimension_kpi_event.cc  dimension_kpi_event.hh  dimension_timeperiod.cc  dimension_timeperiod.hh  dimension_timeperiod_exception.cc  dimension_timeperiod_exception.hh  dimension_timeperiod_exclusion.cc  dimension_truncate_table_signal.cc  dimension_truncate_table_signal.hh  inherited_downtime.cc  inherited_downtime.hh  kpi_event.cc  kpi_event.hh  kpi_status.cc  kpi_status.hh  rebuild.cc  rebuild.hh  state.hh
bbdo/bbdo/: ack.cc  ack.hh  bbdo_version.hh  stop.cc  stop.hh  version_response.cc  version_response.hh
bbdo/precomp_inc/: precomp.hpp
broker/: CMakeLists.txt  Doxyfile  deps.go  sonar-project.properties  thanks.txt
ccc/: CMakeLists.txt  broker_client.hh  client.cc  client.hh  engine_client.hh  main.cc
centreon-clib/: .gitignore  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  cmake.sh  conanfile.txt  deps.sh  sonar-project.properties
clib/: CMakeLists.txt
common/: CMakeLists.txt
configuration/: CMakeLists.txt  anomalydetection_helper.cc  anomalydetection_helper.hh  builder-maker.py  command_helper.cc  command_helper.hh  configuration.proto  connector_helper.cc  connector_helper.hh  contact_helper.cc  contact_helper.hh  contactgroup_helper.cc  contactgroup_helper.hh  host_helper.cc  host_helper.hh  hostdependency_helper.cc  hostdependency_helper.hh  hostescalation_helper.cc  hostescalation_helper.hh  hostgroup_helper.cc  hostgroup_helper.hh  message_helper.cc  message_helper.hh  service_helper.cc  service_helper.hh  servicedependency_helper.cc  servicedependency_helper.hh  serviceescalation_helper.cc  serviceescalation_helper.hh  servicegroup_helper.cc  servicegroup_helper.hh  severity_helper.cc  severity_helper.hh  state-generated.cc  state-generated.hh  state-generated.proto  state.proto  state_helper.cc  state_helper.hh  tag_helper.cc  (+3 more)
engine/: CMakeLists.txt  Doxyfile  deps.go  fail.php  state-generated.cc  state-generated.hh  state-generated.proto
malloc-trace/: CMakeLists.txt  README.md  create_malloc_trace_table.sql  remove_malloc_free.py
rs_centreon/: CMakeLists.txt  Cargo.toml  build.rs
ssh/: CMakeLists.txt
test/: CMakeLists.txt  bin_test_process_output.cc  handle_copy.cc  handle_manager.cc  handle_manager_add.cc  handle_manager_constructor.cc  handle_manager_multiplex.cc  handle_manager_remove_by_handle.cc  handle_manager_remove_by_handle_listener.cc  library_load.cc  library_resolve.cc  process.cc  process_env.cc  process_kill.cc  process_output.cc  process_return.cc  process_terminate.cc  process_timeout.cc  process_wait_timeout.cc  shared_ptr_clear.cc  shared_ptr_constructor.cc  shared_ptr_copy.cc  shared_ptr_is_null.cc  shared_testing_library.cc  task_manager_add.cc  task_manager_add_recurring.cc  task_manager_execute.cc  task_manager_execute_recurring.cc  task_manager_next_execution_time.cc  task_manager_remove_by_id.cc  task_manager_remove_by_task.cc  task_manager_remove_self.cc  timestamp.cc  timestamp_add.cc  timestamp_add_msecond.cc  timestamp_add_mseconds.cc  timestamp_add_seconds.cc  timestamp_add_useconds.cc  timestamp_clear.cc  timestamp_constructor.cc  (+18 more)
(+12273 files in other folders)
